static/style.css
body {
	background: 
	radial-gradient(circle at 100% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent),
	radial-gradient(circle at 0% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent) 0 -50px;
	background-color: slategray;
	background-size:75px 100px;
	-webkit-animation: background-transition 8s linear 7.5s, animated-background 1.09s linear 17.85s alternate 20, shake 2s ease 3.5s alternate 2;
}

h1 {

	color: #eee;
	font-weight: bolder;
	font-family: Papyrus;
	background-color: #456;
	border: 20px ridge slategray;
	text-align: center;
	margin-top: 10px;
	padding-top: 10px;
	-webkit-animation: slidein-right ease 3s;
}

h1:hover {
	color: #456;
	background-color: #eee;
	border: 20px ridge #888;
}

h2 {
	display: inline-block;
	background-color: #456;
	font-family: Papyrus;
	color: #eee;
	border:15px groove slategray;
	padding:10px;
	margin-bottom: 20px; 
	float:left;
}

h2:hover {
	color: #456;
	background-color: #eee;
	border: 15px groove #888;
}

.h2-slideoff {
	-webkit-animation: off-right 3.7s, slideoff 3s ease-in 3.7s reverse;
}

.orbit-container {
	-webkit-animation: off-right 3.7s, slideoff 3s ease-in 3.7s reverse;
	float:right;
}

@-webkit-keyframes slidein-right {
	from {
		margin-left:100%;
		width:300%
  }

  50% {
	  font-size:450%;
	  margin-left:0%;
	  width:150%;
  }

  to {
	  margin-left:0%;
	  width:100%;
  }
}

@-webkit-keyframes grow {
	50% { -webkit-transform: scale(2); }
}

@-webkit-keyframes shake {
	0% { -webkit-transform: rotate(0deg); }
	100% { 
		-webkit-transform: rotate(-20deg);
		/* background-position: 50% 50%; */
	}
}

@-webkit-keyframes off-right {
	0%, 100% { margin-left:1000%; }
}

@-webkit-keyframes slideoff {
	from { margin-left:0%; }
	to { margin-left:150%; }
}
@-webkit-keyframes background-transition {
	from {
	}
	5% {
		background-image: url('img/trippy.jpg');
	}
	20% {
		background-image: url('img/skyline.jpg');
	}
	35% {
		background-image: url('img/psychedelic.jpg');
	}
	60% {
		background-image: url('img/artwork_colors.jpg');
	}
	80% {
		background-image: url('img/Trippy-Wallpaper.jpg');
	}
to {
	background-image: url('/static/img/Trippy-Wallpaper.jpg');
	background-size: 150% 150%;
}
}

@-webkit-keyframes animated-background {
	from { 
		background-position: 0 0;
	}
	50% {
		background-position: 6.25% 0;
}
to {
	background-position: 6.25% 11%; 
}

}	
/*= require foundation */

